minikube/IaaC/namespaces/testing/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testing-ingress
  namespace: testing
  labels:
    name: testing-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: minikube.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: load-simulator-svc
                port:
                  number: 3000
